--- a/EXAMPLE_EVALUATE3.yaml
+++ b/EXAMPLE_EVALUATE3.yaml
@@ -1,13 +1,15 @@
 timing: True
-debug: True
+debug: False
 stop_at_error: True
 
 likelihood:
-  des_y3.des_3x2pt:
+  des_y3.des_cosmic_shear:
     path: ./external_modules/data/des_y3
-    print_datavector: True
-    data_file: DES_Y1_all_cs.dataset
-    print_datavector_file: "./projects/des_y3/chains/des_y1_theory_all_cosmic_shear.modelvector"
+    data_file: DES_Y1_real.dataset
+    accuracyboost: 1.0
+    samplingboost: 1.0
+    integration_accuracy: 0 # integer 0, 1 or 2
+    kmax_boltzmann: 10.0
 
 params:
   As_1e9:
@@ -22,9 +24,6 @@ params:
     latex: 10^9 A_\mathrm{s}
     drop: true
     renames: A
-  As:
-    value: 'lambda As_1e9: 1e-9 * As_1e9'
-    latex: A_\mathrm{s}
   ns:
     prior:
       min: 0.87
@@ -68,54 +67,41 @@ params:
     latex: \Omega_\mathrm{m}
     drop: true
   mnu:
-    value: 0.06
-    latex: \m_\\nu
+    prior:
+      min: 0.06
+      max: 0.6
+    ref:
+      dist: norm
+      loc: 0.25
+      scale: 0.1
+    proposal: 0.05
+  w0pwa:
+    prior:
+      min: -5 
+      max: -0.01
+    ref:
+      dist: norm
+      loc: -0.99
+      scale: 0.05
+    proposal: 0.05
+    latex: w_{0,\mathrm{DE}}+w_{a,\mathrm{DE}}
+    drop: true
   w:
-    value: -1.0
+    prior:
+      min: -3
+      max: -0.01
+    ref:
+      dist: norm
+      loc: -0.99
+      scale: 0.05
+    proposal: 0.05
     latex: w_{0,\mathrm{DE}}
   tau:
     value: 0.0697186
     latex: \tau_\mathrm{reio}
-  # ------------------------------------------------------------------------
-  # ------------------------------------------------------------------------
-  # ------------------------------------------------------------------------
-  omegabh2:
-    value: 'lambda omegab, H0: omegab*(H0/100)**2'
-    latex: \Omega_\mathrm{b} h^2
-  omegach2:
-    value: 'lambda omegam, omegab, mnu, H0: (omegam-omegab)*(H0/100)**2-(mnu*(3.046/3)**0.75)/94.0708'
-    latex: \Omega_\mathrm{c} h^2
-  omegal:
-    latex: \Omega_\Lambda
-  omegamh2:
-    derived: 'lambda omegam, H0: omegam*(H0/100)**2'
-    latex: \Omega_\mathrm{m} h^2
-  sigma8:
-    latex: \sigma_8
-  s8h5:
-    derived: 'lambda sigma8, H0: sigma8*(H0*1e-2)**(-0.5)'
-    latex: \sigma_8/h^{0.5}
-  s8omegamp5:
-    derived: 'lambda sigma8, omegam: sigma8*omegam**0.5'
-    latex: \sigma_8 \Omega_\mathrm{m}^{0.5}
-  s8omegamp25:
-    derived: 'lambda sigma8, omegam: sigma8*omegam**0.25'
-    latex: \sigma_8 \Omega_\mathrm{m}^{0.25}
-  age:
-    latex: '{\rm{Age}}/\mathrm{Gyr}'
-  rdrag:
-    latex: r_\mathrm{drag}
-  yheused:
-    latex: Y_P^\mathrm{BBN}
-  omegan2:
-    latex: \Omega_\mathrm{\\nu} h^2
-  omegan:
-    derived: 'lambda omegan2, H0: omegan2/((H0/100)**2)'
-    latex: \Omega_\mathrm{\\nu}
-  # ------------------------------------------------------------------------
-  # ------------------------------------------------------------------------
-  # ------------------------------------------------------------------------
-# DES-Y1 3x2 nuissance parameter Start
+  # ---------------------------------------------------------------------------------------
+  # DES-Y1 CS nuissance parameter Start
+  # ---------------------------------------------------------------------------------------
   DES_DZ_S1:
     prior:
       dist: norm
@@ -213,93 +199,55 @@ params:
   DES_BTA_1: #TATT, not used for Y1
     value: 1.0
     latex: A_\mathrm{BTA-IA,DES}^1
- # Lensing photo-z errors
-  DES_DZ_L1:
-    prior:
-      dist: norm
-      loc: 0.008
-      scale: 0.007
-    ref:
-      dist: norm
-      loc: 0.008
-      scale: 0.007
-    proposal: 0.004
-    latex: \Delta z_\mathrm{l,DES}^1
-  DES_DZ_L2:
-    prior:
-      dist: norm
-      loc: -0.005
-      scale: 0.007
-    ref:
-      dist: norm
-      loc: -0.005
-      scale: 0.007
-    proposal: 0.003
-    latex: \Delta z_\mathrm{l,DES}^2
-  DES_DZ_L3:
-    prior:
-      dist: norm
-      loc: 0.006
-      scale: 0.006
-    ref:
-      dist: norm
-      loc: 0.006
-      scale: 0.006
-    proposal: 0.003
-    latex: \Delta z_\mathrm{l,DES}^3
-  DES_DZ_L4:
-    prior:
-      dist: norm
-      loc: 0.0
-      scale: 0.01
-    ref:
-      dist: norm
-      loc: 0.0
-      scale: 0.01
-    proposal: 0.005
-    latex: \Delta z_\mathrm{l,DES}^4
-  DES_DZ_L5:
-    prior:
-      dist: norm
-      loc: 0.0
-      scale: 0.01
-    ref:
-      dist: norm
-      loc: 0.0
-      scale: 0.01
-    proposal: 0.005
-    latex: \Delta z_\mathrm{l,DES}^5
-  DES_PM1:
-    value: 0.0
-    latex: PM_\mathrm{DES}^1
-  DES_PM2:
-    value: 0.0
-    latex: PM_\mathrm{DES}^2
-  DES_PM3:
-    value: 0.0
-    latex: PM_\mathrm{DES}^3
-  DES_PM4:
-    value: 0.0
-    latex: PM_\mathrm{DES}^4
-  DES_PM5:
-    value: 0.0
-    latex: PM_\mathrm{DES}^5
-  DES_BMAG_1:
-    value: 1.0
-    latex: b_\mathrm{BMAG-DES}^1
-  DES_BMAG_2:
-    value: 1.0
-    latex: b_\mathrm{BMAG-DES}^2
-  DES_BMAG_3:
-    value: 1.0
-    latex: b_\mathrm{BMAG-DES}^3
-  DES_BMAG_4:
-    value: 1.0
-    latex: b_\mathrm{BMAG-DES}^4
-  DES_BMAG_5:
-    value: 1.0
-    latex: b_\mathrm{BMAG-DES}^5
-# DES-Y1 3x2 nuissance parameter End
+  # ---------------------------------------------------------------------------------------
+  # DES-Y1 CS nuissance parameter End
+  # ---------------------------------------------------------------------------------------
+  # ---------------------------------------------------------------------------------------
+  # ------------------------------------- DERIVED PARAMETERS ------------------------------
+  # ---------------------------------------------------------------------------------------
+  # WARNING: DO NOT REMOVE omegabh2/omegach2/omegamh2/wa FROM DERIVED PARAMETERS
+  # WARNING: DO NOT REMOVE THE DROP FLAG FROM omegab/omegam/As_1e9/w0pwa
+  # SEE: github.com/CosmoLike/cocoa#warning-warning-warning-weak-lensing-yaml-files-in-cobaya-
+  # --------------------------------------------------------------------------------------- 
+  As:
+    value: 'lambda As_1e9: 1e-9 * As_1e9'
+    latex: A_\mathrm{s}
+  wa:
+    value: 'lambda w0pwa, w: w0pwa - w'
+    latex: w_{a,\mathrm{DE}}
+  omegabh2:
+    value: 'lambda omegab, H0: omegab*(H0/100)**2'
+    latex: \Omega_\mathrm{b} h^2
+  omegach2:
+    value: 'lambda omegam, omegab, mnu, H0: (omegam-omegab)*(H0/100)**2-(mnu*(3.046/3)**0.75)/94.0708'
+    latex: \Omega_\mathrm{c} h^2
+  omegal:
+    latex: \Omega_\Lambda
+  omegamh2:
+    derived: 'lambda omegam, H0: omegam*(H0/100)**2'
+    latex: \Omega_\mathrm{m} h^2
+  sigma8:
+    latex: \sigma_8
+  s8h5:
+    derived: 'lambda sigma8, H0: sigma8*(H0*1e-2)**(-0.5)'
+    latex: \sigma_8/h^{0.5}
+  s8omegamp5:
+    derived: 'lambda sigma8, omegam: sigma8*omegam**0.5'
+    latex: \sigma_8 \Omega_\mathrm{m}^{0.5}
+  s8omegamp25:
+    derived: 'lambda sigma8, omegam: sigma8*omegam**0.25'
+    latex: \sigma_8 \Omega_\mathrm{m}^{0.25}
+  age:
+    latex: '{\rm{Age}}/\mathrm{Gyr}'
+  rdrag:
+    latex: r_\mathrm{drag}
+  yheused:
+    latex: Y_P^\mathrm{BBN}
+  omegan2:
+    latex: \Omega_\mathrm{\\nu} h^2
+  omegan:
+    derived: 'lambda omegan2, H0: omegan2/((H0/100)**2)'
+    latex: \Omega_\mathrm{\\nu}
 
 theory:
   camb:
@@ -307,8 +255,8 @@ theory:
     use_renames: True
     extra_args:
       halofit_version: takahashi
-      AccuracyBoost: 1.15
-      lens_potential_accuracy: 1.1
+      AccuracyBoost: 1.05
+      lens_potential_accuracy: 1
       num_massive_neutrinos: 1
       nnu: 3.046
       dark_energy_model: ppf
@@ -324,6 +272,7 @@ sampler:
       H0: 67.32
       omegab: 0.04
       omegam: 0.3
+      mnu: 0.06
       DES_DZ_S1: 0.0414632
       DES_DZ_S2: 0.00147332
       DES_DZ_S3: 0.0237035
@@ -334,15 +283,7 @@ sampler:
       DES_M4: -0.0158096
       DES_A1_1: 0.606102
       DES_A1_2: -1.51541
-      DES_DZ_L1: 0.00457604
-      DES_DZ_L2: 0.000309875
-      DES_DZ_L3: 0.00855907
-      DES_DZ_L4: -0.00316269
-      DES_DZ_L5: -0.0146753
-      DES_B1_1: 1.72716
-      DES_B1_2: 1.65168
-      DES_B1_3: 1.61423
-      DES_B1_4: 1.92886
-      DES_B1_5: 2.11633
+      w0pwa: -0.9
+      w: -0.9
 
-output: ./projects/des_y3/chains/EXAMPLE_EVALUATE1
+output: ./projects/des_y3/chains/EXAMPLE_EVALUATE3
