--- a/EXAMPLE_MCMC4.yaml
+++ b/EXAMPLE_MCMC4.yaml
@@ -24,9 +24,6 @@ params:
     latex: 10^9 A_\mathrm{s}
     drop: true
     renames: A
-  As:
-    value: 'lambda As_1e9: 1e-9 * As_1e9'
-    latex: A_\mathrm{s}
   ns:
     prior:
       min: 0.87
@@ -90,9 +87,6 @@ params:
       scale: 0.05
     proposal: 0.05
     latex: w_{0,\mathrm{DE}}
-  wa:
-    value: 'lambda w0pwa, w: w0pwa - w'
-    latex: w_{a,\mathrm{DE}}
   mnu:
     value: 0.06
   tau:
@@ -291,6 +285,7 @@ params:
   # ------------------------------------- DERIVED PARAMETERS ------------------------------
   # ---------------------------------------------------------------------------------------
   # WARNING: DO NOT REMOVE omegabh2/omegach2/omegamh2/wa FROM DERIVED PARAMETERS
+  # WARNING: DO NOT REMOVE THE DROP FLAG FROM omegab/omegam/As_1e9/w0pwa
   # SEE: github.com/CosmoLike/cocoa#warning-warning-warning-weak-lensing-yaml-files-in-cobaya-
   # --------------------------------------------------------------------------------------- 
   As:
@@ -364,9 +359,9 @@ sampler:
     # Don't learn if convergence better than...
     learn_proposal_Rminus1_min: 0.035
     # Don't learn if convergence is worse than...
-    learn_proposal_Rminus1_max: 200
+    learn_proposal_Rminus1_max: 150
     # (even earlier if a param is not in the given covariance matrix)
-    learn_proposal_Rminus1_max_early: 30.
+    learn_proposal_Rminus1_max_early: 300.
     # ---------------------------------------------------------------------
     # ---------------------------------------------------------------------
     # Convergence and stopping
