--- a/EXAMPLE_EVALUATE3.yaml
+++ b/EXAMPLE_EVALUATE3.yaml
@@ -7,9 +7,8 @@ likelihood:
     path: ./external_modules/data/des_y3
     data_file: DES_Y1_real.dataset
     accuracyboost: 1.0
-    samplingboost: 1.0
-    integration_accuracy: 0 # integer 0, 1 or 2
-    kmax_boltzmann: 10.0
+    integration_accuracy: 0
+    kmax_boltzmann: 5.0
 
 params:
   As_1e9:
@@ -190,13 +189,33 @@ params:
       scale: 0.023
     proposal: 0.005
     latex: m_\mathrm{DES}^4
-  DES_A2_1: #TATT, not used for Y1
+  DES_A1_1:
+    prior:
+      min: -5
+      max:  5
+    ref:
+      dist: norm
+      loc: 0.7
+      scale: 0.5
+    proposal: 0.5
+    latex: A_\mathrm{1-IA,DES}^1
+  DES_A1_2:
+    prior:
+      min: -5
+      max:  5
+    ref:
+      dist: norm
+      loc: -1.7
+      scale: 0.5
+    proposal: 0.5
+    latex: A_\mathrm{1-IA,DES}^2
+  DES_A2_1: #TATT, not used for Y1  (IA = 4 on cosmolike which does't even consider these params)
     value: 0.0
     latex: A_\mathrm{2-IA,DES}^1 
-  DES_A2_2: #TATT, not used for Y1
+  DES_A2_2: #TATT, not used for Y1  (IA = 4 on cosmolike which does't even consider these params)
     value: 0.0
     latex: A_\mathrm{2-IA,DES}^2
-  DES_BTA_1: #TATT, not used for Y1
+  DES_BTA_1: #TATT, not used for Y1 (IA = 4 on cosmolike which does't even consider these params)
     value: 1.0
     latex: A_\mathrm{BTA-IA,DES}^1
   # ---------------------------------------------------------------------------------------
