--- a/interface/MakefileCosmolike
+++ b/interface/MakefileCosmolike
@@ -28,13 +28,17 @@ CLOG :=1
 # LINK PYBIND LIBRARY
 PYBIND := 1
 
-# DEFINE TEST CODE
-TEST := 1
+# LINK HDF5 LIBRARY
+#HDF5 := 1
 
 CSOURCES =
 OBJECTC =
+
+CPPSOURCES =
+OBJECTCPP =
+
 CFLAGS =  -std=c99 -I ${ROOTDIR}/.local/include/ -I ${ROOTDIR}/external_modules/code/
-CXXFLAGS = -std=c++14 -I ${ROOTDIR}/.local/include/ -I ${ROOTDIR}/external_modules/code/
+CXXFLAGS = -std=c++17 -I ${ROOTDIR}/.local/include/ -I ${ROOTDIR}/external_modules/code/
 LDFLAGS = -L ${ROOTDIR}/.local/lib
 
 ifdef COSMOLIKE_DEBUG_MODE
@@ -43,22 +47,13 @@ else
 	COMMON_FLAGS += -O3 -fmax-errors=1 -ffast-math -fopenmp
 endif
 
-ifdef CPLUS_INCLUDE_PATH
-	CXXFLAGS += -I ${CPLUS_INCLUDE_PATH}
-endif
-
-
-ifdef C_INCLUDE_PATH
-	CFLAGS += -I ${C_INCLUDE_PATH}
-endif
-
 ifdef IGNORE_CPP_SPDLOG_INSTALLATION
 	COMMON_FLAGS += -I ${GLOBAL_PACKAGES_INCLUDE}
 endif
 
 ifdef ARMA
-	CXXFLAGS += -DARMA
-	LDFLAGS += -llapack
+	CXXFLAGS += -DARMA -DARMA_DONT_PRINT_FAST_MATH_WARNING
+	LDFLAGS += -llapack -lopenblas -larpack -larmadillo
 endif
 
 ifdef GSL
@@ -104,16 +99,17 @@ ifdef SPDLOG
 	endif
 endif
 
-ifdef TEST
-	COMMON_FLAGS += -DTEST
-endif
-
 CFLAGS += ${COMMON_FLAGS}
 CXXFLAGS += ${COMMON_FLAGS}
 
 ifdef PYBIND
 	CXXFLAGS += $(shell python3 -m pybind11 --includes) -DPYBIND11
 	LDFLAGS += $(shell python3-config --ldflags)
+endif
+
+ifdef HDF5
+	CFLAGS += -DHDF5LIB
+	LDFLAGS += -lhdf5
 endif
 
 LDFLAGS += -lm
@@ -135,7 +131,6 @@ CSOURCES += \
 		${ROOTDIR}/external_modules/code/cosmolike/cosmo2D.c \
 		${ROOTDIR}/external_modules/code/cosmolike/halo.c \
 		${ROOTDIR}/external_modules/code/cosmolike/IA.c \
-		${ROOTDIR}/external_modules/code/cosmolike/recompute.c \
 		${ROOTDIR}/external_modules/code/cosmolike/radial_weights.c \
 		${ROOTDIR}/external_modules/code/cosmolike/redshift_spline.c \
 		${ROOTDIR}/external_modules/code/cosmolike/structs.c \
@@ -156,20 +151,27 @@ OBJECTC += \
 		./halo.o \
 		./IA.o \
 		./radial_weights.o \
-		./recompute.o \
 		./redshift_spline.o \
 		./structs.o \
-		./pt_cfastpt.o \
+		./pt_cfastpt.o
+
+CPPSOURCES += \
+		${ROOTDIR}/external_modules/code/cosmolike/generic_interface.cpp \
+		${ROOTDIR}/external_modules/code/cosmolike/cosmo2D_wrapper.cpp
+
+OBJECTCPP += \
+		./generic_interface.o \
+		./cosmo2D_wrapper.o
 
 $(OBJECTC): $(CSOURCES)
-	$(CC) $(CFLAGS) -fPIC -DCOBAYA_SAMPLER -c $(CSOURCES)
+	$(CC) $(CFLAGS) -fPIC -c $(CSOURCES)
 
-cosmolike_des_y3_interface.so: $(OBJECTC) $(CSOURCES) interface.cpp
-	$(CXX) $(CXXFLAGS) -DCOBAYA_SAMPLER -shared -fPIC -o $@ $(OBJECTC) interface.cpp $(LDFLAGS)
+$(OBJECTCPP): $(CPPSOURCES)
+	$(CXX) $(CXXFLAGS) -fPIC -c $(CPPSOURCES)
+
+cosmolike_des_y3_interface.so: $(OBJECTC) $(OBJECTCPP)
+	$(CXX) $(CXXFLAGS) -DCOBAYA_SAMPLER -shared -fPIC -o $@ $(OBJECTC) $(OBJECTCPP) interface.cpp $(LDFLAGS)
 	@rm *.o
-
-test: $(OBJECTC) $(CSOURCES) interface.cpp
-	$(CXX) $(CXXFLAGS) -DCOBAYA_SAMPLER -fPIC -o $@ $(OBJECTC) interface.cpp $(LDFLAGS)
 
 clean:
 	@rm -rf cosmolike_des_y3_interface.so cosmolike_des_y3_interface.so.dSYM  *.o
