--- a/likelihood/des_3x2pt.yaml
+++ b/likelihood/des_3x2pt.yaml
@@ -4,7 +4,16 @@ accuracyboost: 1.0
 samplingboost: 1.0
 integration_accuracy: 1
 kmax_boltzmann: 5.0
-speed: 2
+speed: 1
+non_linear_emul: 2
+# 0 = NO_IA (AMPLITUDES SET TO ZERO), 1 = IA_NLA_LF
+# 2 = IA_REDSHIFT_BINNING, 3 = IA_REDSHIFT_EVOLUTION
+IA_redshift_evolution: 3
+# IA_MODEL: 0 = NLA, 1 = TATT
+IA_model: 0
+
+# BIAS REDSHIFT EVOLUTION [b1,b2,bs2,b3,bmag] (see bias.c)
+bias_model: [0,0,0,1,0]
 
 print_intermediate_products: False
 
