--- a/EXAMPLE_EVALUATE4.yaml
+++ b/EXAMPLE_EVALUATE4.yaml
@@ -4,12 +4,19 @@ stop_at_error: True
 
 likelihood:
   des_y3.des_3x2pt:
+  #des_y3.des_2x2pt:
+  #des_y3.des_xi_gg:
+  #des_y3.des_xi_ggl:
     path: ./external_modules/data/des_y3
-    data_file: DES_Y1_real.dataset
+    data_file: des_y1_real.dataset
     accuracyboost: 1.0
     integration_accuracy: 0
     kmax_boltzmann: 5.0
-
+    # 1 EE2, 2 Halofit
+    non_linear_emul: 2
+    IA_model: 0
+    IA_redshift_evolution: 3
+    
 params:
   As_1e9:
     prior:
@@ -209,14 +216,14 @@ params:
       scale: 0.5
     proposal: 0.5
     latex: A_\mathrm{1-IA,DES}^2
-  DES_A2_1: #TATT, not used for Y1 (IA = 4 on cosmolike which does't even consider these params)
+  DES_A2_1: #TATT, not used for Y1 (IA = NLA on cosmolike which does't even consider these params)
     value: 0.0
     latex: A_\mathrm{2-IA,DES}^1 
-  DES_A2_2: #TATT, not used for Y1 (IA = 4 on cosmolike which does't even consider these params)
+  DES_A2_2: #TATT, not used for Y1 (IA = NLA on cosmolike which does't even consider these params)
     value: 0.0
     latex: A_\mathrm{2-IA,DES}^2
-  DES_BTA_1: #TATT, not used for Y1 (IA = 4 on cosmolike which does't even consider these params)
-    value: 1.0
+  DES_BTA_1: #TATT, not used for Y1 (IA = NLA on cosmolike which does't even consider these params)
+    value: 0.0
     latex: A_\mathrm{BTA-IA,DES}^1
  # Lensing photo-z errors
   DES_DZ_L1:
