--- a/likelihood/des_cosmic_shear.yaml
+++ b/likelihood/des_cosmic_shear.yaml
@@ -1,10 +1,16 @@
 path: null
-data_file: DES_Y3.dataset
+data_file: des_y3.dataset
 accuracyboost: 1.0
 samplingboost: 1.0
-integration_accuracy: 1
+integration_accuracy: 0
 kmax_boltzmann: 5.0
-speed: 4
+speed: 1
+non_linear_emul: 2
+# 0 = NO_IA (AMPLITUDES SET TO ZERO), 1 = IA_NLA_LF
+# 2 = IA_REDSHIFT_BINNING, 3 = IA_REDSHIFT_EVOLUTION
+IA_redshift_evolution: 3
+# IA_MODEL: 0 = NLA, 1 = TATT
+IA_model: 0
 
 print_intermediate_products: False
 
@@ -13,7 +19,7 @@ which_baryonic_simulations_for_dv_contamination: TNG100
 
 create_baryon_pca: False
 baryon_pca_select_simulations: TNG100/HzAGN/mb2/illustris/eagle/owls_AGN_T80/owls_AGN_T85/owls_AGN_T87/BAHAMAS_T76/BAHAMAS_T78/BAHAMAS_T80
-filename_baryon_pca: "./project/des_y3"
+filename_baryon_pca: "./project/des_y3/data/pca.txt"
 
 print_datavector: False
 print_datavector_file: "./projects/des_y3/chains/des_y3_theory_cosmic_shear.modelvector"
