deleted jupyter checkpoints

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ chains/
 EXAMPLE_EVALUATE2-checkpoint.ipynb
 EXAMPLE_EVALUATE1-checkpoint.ipynb
 EXAMPLE_EVALUATE3-checkpoint.ipynb
+.ipynb_checkpoints
